[package]
name = "hasty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
daggy = "0.8.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
tokio = { version = "1.22.0", features = ["full"] }
