[package]
name = "hasty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
daggy = "0.8.0"
futures = "0.3.25"
glob = "0.3.0"
hex = "0.4.3"
log = "0.4.17"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
sha2 = "0.10.6"
tokio = { version = "1.22.0", features = ["full", "process"] }
urlencoding = "2.1.2"
